--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "682643da-b995-4346-8c6a-9b654bba8793"
 authors = ["Riccardo Foffi <riccardo.foffi@protonmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Hungarian = "e91730f6-4275-51fb-a7a0-7064cfbd3b39"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
 [compat]
 julia = "1"
 
