--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,15 @@ authors = ["Riccardo Foffi <riccardo.foffi@protonmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-BlobDetection = "b9b9df36-df81-4d1f-9383-9378060e8564"
+ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 Hungarian = "e91730f6-4275-51fb-a7a0-7064cfbd3b39"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TiffImages = "731e570b-9d59-4bfa-96dc-6df516fadf69"
