--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,7 +1,3 @@
-coverage:
-  status:
-    project:
-      default:
-        # only require PRs to not decrease coverage
-        target: 0%    # the required coverage value
-        threshold: 0%  # the leniency in hitting the target
+ignore:
+  - "test"
+  - "docs"
