--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Riccardo Foffi <rfoffi@ethz.ch> and contributors"]
 version = "0.3.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
@@ -12,16 +14,18 @@ PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [weakdeps]
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [extensions]
 GLMakieExt = "GLMakie"
 MakieExt = "Makie"
 
 [compat]
+DataFrames = "1.8.0"
 GLMakie = "0.13"
 GeometryBasics = "0.4 - 0.5"
+Graphs = "1.13.1"
 ImageFiltering = "0.7"
 Makie = "0.24"
 OffsetArrays = "1"
